// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideNav renders closed correctly 1`] = `
<div
  class="side-nav closed"
  data-testid="lyzer-side-nav"
  id="side-menu"
>
  <svg
    class="lucide lucide-arrow-left-to-line closeIcon"
    fill="none"
    height="28"
    stroke="black"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 19V5"
    />
    <path
      d="m13 6-6 6 6 6"
    />
    <path
      d="M7 12h14"
    />
  </svg>
  <div
    class="links"
    id="links"
  >
    <a
      class="link-container selected"
      data-discover="true"
      href="/"
    >
      <svg
        class="lucide lucide-house"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
      <div>
        OVERVIEW
      </div>
    </a>
    <a
      class="link-container "
      data-discover="true"
      href="/drivers"
    >
      <svg
        class="lucide lucide-user"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <div>
        DRIVERS
      </div>
    </a>
  </div>
</div>
`;

exports[`SideNav renders open correctly 1`] = `
<div
  class="side-nav open"
  data-testid="lyzer-side-nav"
  id="side-menu"
>
  <svg
    class="lucide lucide-arrow-left-to-line closeIcon"
    fill="none"
    height="28"
    stroke="black"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 19V5"
    />
    <path
      d="m13 6-6 6 6 6"
    />
    <path
      d="M7 12h14"
    />
  </svg>
  <div
    class="links"
    id="links"
  >
    <a
      class="link-container selected"
      data-discover="true"
      href="/"
    >
      <svg
        class="lucide lucide-house"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
      <div>
        OVERVIEW
      </div>
    </a>
    <a
      class="link-container "
      data-discover="true"
      href="/drivers"
    >
      <svg
        class="lucide lucide-user"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
      <div>
        DRIVERS
      </div>
    </a>
  </div>
</div>
`;
